# TransitPilot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lines.c  lines.h  load.c  load.h  main.c  menu.c  menu.h  pathfinder.c  pathfinder.h  route.c  route.h  route_t.c  route_t.h  tline.c  tline.h  tline_t.h  transit.c  transit.h  tstop.c  tstop.h  tstop_t.h
configs/: demo-config.txt
configurations/: budapest-metro.txt
demo_config_files/: budapest-bkk-demo1.txt
lib/: console.c  console.h
types/: route_t.c  route_t.h  tline_t.c  tline_t.h  troute_t.c  troute_t.h  tstop_t.c  tstop_t.h
